--- a/android/app/src/main/res/layout/fragment_permit_data_view.xml
+++ b/android/app/src/main/res/layout/fragment_permit_data_view.xml
@@ -13,6 +13,10 @@
             style="@style/back_button"
             android:id="@+id/back_button_permit_data_view"/>
 
+        <Button
+            style="@style/full_report_button_toolbar"
+            android:id="@+id/full_report_button_permit_data_view"/>
+
     </android.support.v7.widget.Toolbar>
 
     <LinearLayout
