--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -91,6 +91,23 @@
         <item name="android:drawableStart">@drawable/ic_full_report</item>
     </style>
 
+    <style name="full_report_button_toolbar">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:background">?android:selectableItemBackground</item>
+        <item name="android:clickable">true</item>
+        <item name="android:scaleType">center</item>
+        <item name="android:contentDescription">@string/button_desc_full_report</item>
+        <item name="android:layout_gravity">end</item>
+        <item name="android:paddingEnd">16dp</item>
+        <item name="android:text">@string/button_desc_full_report</item>
+        <item name="android:textSize">@dimen/text_button_large</item>
+        <item name="android:textColor">@color/colorTextPrimary</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textAlignment">textEnd</item>
+        <item name="android:drawableStart">@drawable/ic_full_report</item>
+    </style>
+
     <style name="big_button" parent="Theme.AppCompat">
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">fill_parent</item>
